fix font & scaling on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'IBM';
-    src: url('/Web437_IBM_MODEL3x_Alt2.woff') format('woff');
+    src: url('/IBM.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -209,6 +209,10 @@ p {
 
     .user_input {
         width: 100%;
+        float: left;
+    }
+    .price_box {
+        width: 35%;
         float: left;
     }
 }
